--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 	</section>
 	<!--================ End About Us Area =================-->
 
-	<!--================ Start Features Area =================-->
+	<!--================ Start Skill =================-->
 	<section class="services_area">
 		<div class="container">
 			<div class="row">
@@ -182,7 +182,7 @@
 			</div>
 		</div>
 	</section>
-	<!--================ End Features Area =================-->
+	<!--================ End Skill =================-->
 
 
   <!--================ Start Testimonial Area =================-->
@@ -327,7 +327,7 @@
 	</section>
 	<!--================ End Portfolio Area =================-->
 
-	<!--================ Start Blog Area =================-->
+	<!--================ Start Contact =================-->
 	<div id="contact"></div>
 	<section class="blog-area section-gap">
 		<div class="container">
@@ -342,7 +342,7 @@
 
 			<div class="row">
 				
-				<div class="col-lg-6 order-lg-2 text-center">
+				<div class="col-lg-6 order-lg-2 text-center mb-4">
 					<img src="img/contact-us.svg" alt="" style="width: 80%;" class="img-fluid">
 				</div>
 				<div class="col-lg-6 order-lg-1 text-center">
@@ -358,11 +358,7 @@
 			</div>
 		</div>
 	</section>
-	<!--================ End Blog Area =================-->
-
-	<!--================ Start Brands Area =================-->
-	
-	<!--================ End Brands Area =================-->
+	<!--================ End Contact =================-->
 
 	<!--================Footer Area =================-->
 	<footer class="footer_area">
