--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 					<div class="grid-sizer col-md-3 col-lg-3"></div>
 					<div class="col-lg-6 col-md-6 all following">
 						<div class="single_portfolio" style="border-radius:10px;max-height: 251px;    box-shadow: 0 0 1px #000000db;">
-							<img class="img-fluid w-100" style="max-height: 251px;border-radius: 10px;" src="img/portfolio/Portfolio1.png" alt="">
+							<img class="img-fluid w-100" style="max-height: 251px;border-radius: 10px;" src="portfolio/Portfolio1.png" alt="">
 							<div class="overlay"></div>
 							<div class="short_info">
 								<h4><a href="portfolio-details.html">First Media Jakarta</a></h4>
@@ -310,7 +310,7 @@
 
 					<div class="col-lg-6 col-md-6 all latest popular upcoming">
 						<div class="single_portfolio" style="border-radius:10px;    box-shadow: 0 0 1px #000000db;">
-							<img class="img-fluid w-100" style="border-radius: 10px;" src="img/portfolio/Portfolio2.png" alt="">
+							<img class="img-fluid w-100" style="border-radius: 10px;" src="portfolio/Portfolio2.png" alt="">
 							<div class="overlay"></div>
 							<div class="short_info">
 								<h4><a href="portfolio-details.html">ReactJS Marketing Web</a></h4>
