--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 						<input type="text" name="email" id="" style="border-radius: 25px;padding: 20px;" placeholder="Email" class="form-control mt-2 mb-3">
 						<input type="text" name="subject" id="" style="border-radius: 25px;padding: 20px;" placeholder="Subject" class="form-control mt-2 mb-3">
 						<textarea name="message" id="" style="border-radius: 25px;padding: 10px 20px;" placeholder="Message" class="form-control mt-2 mb-3" cols="30" rows="3"></textarea>
-						<input type="submit" value="Send Message" class="primary_btn" style="padding: 10px 50px;border-radius: 25px;">
+						<input type="submit" value="Send Message" class="btn btn-primary" style="padding: 10px 50px;border-radius: 25px;">
 					</form>
 				</div>
 
