--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 							<h1 class="text-uppercase">I am Riyan</h1>
 							<h5 class="text-uppercase">Software & Web Developer</h5>
 							<div class="social_icons my-5">
-								<a href="facebook.com/trivanz.is.one"><i class="fab fa-facebook"></i></a>
+								<a href="http://facebook.com/trivanz.is.one"><i class="fab fa-facebook"></i></a>
 								<a href="mailto: riyan.foobar@gmail.com"><i class="fas fa-envelope"></i></a>
-								<a href="wa.me/6298516176514"><i class="fab fa-whatsapp"></i></a>
+								<a href="http://wa.me/6298516176514"><i class="fab fa-whatsapp"></i></a>
 							</div>
 							<a class="primary_btn" href="#portfolio"><span>See My Work</span></a>
 						</div>
