--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					</div>
 					<div class="col-lg-4">
 						<div class="home_right_img" style="width: 410px;"> 
-							
+							&nbsp;
 						</div>
 					</div>
 				</div>
