--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="container">
 				<div class="row align-items-center justify-content-between">
 					<div class="col-lg-6">
-						<div class="banner_content">
+						<div class="banner_content" style='position:relative;top:150px'>
 							<h3>Hey There !</h3>
 							<h1 class="text-uppercase">I am Riyan</h1>
 							<h5 class="text-uppercase">Software & Web Developer</h5>
@@ -147,7 +147,7 @@
 				<div class="col-lg-12">
 					<div class="main_title">
 						<p class="top_text">My Skill</p>
-						<h2>What Skills Do I Have ?<br>
+						<h2>What Skills I Have ?<br>
 					</div>
 				</div>
 			</div>
