--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	<style>
 		html{
 			scroll-behavior: smooth;
-			
+		}
+		.list-group-item{
+			margin: 3px 0;
 		}
 	</style>
 	<link rel="stylesheet" href="css/style.css">
@@ -157,6 +159,12 @@
 					<img style="width: 50%;" src="img/logo/Ci.png" alt="" class="img-fluid">
 				</div>
 				<div class="col-md-3 col-xs-6 mt-4 mb-4">
+					<img style="width: 50%;" src="img/logo/nodejs.png" alt="" class="img-fluid">
+				</div>
+				<div class="col-md-3 col-xs-6 mt-4 mb-4">
+					<img style="width: 50%;" src="img/logo/nestjs.png" alt="" class="img-fluid">
+				</div>
+				<div class="col-md-3 col-xs-6 mt-4 mb-4">
 					<img style="width: 70%;" src="img/logo/Bootstrap.png" alt="" class="img-fluid">
 				</div>
 				<div class="col-md-3 col-xs-6 mt-4 mb-4">
@@ -287,40 +295,53 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<div class="main_title">
+					<div class="main_title" style='margin-bottom: 40px;'>
 						<p class="top_text">Portfolio</p>
-						<h2>Check Our Recent <br>
-							Client Work </h2>
+						<h2> My Portfolio </h2>
 					</div>
 				</div>
-			</div>
 
-			<div class="filters-content">
-				<div class="row portfolio-grid">
-					<div class="grid-sizer col-md-3 col-lg-3"></div>
-					<div class="col-lg-6 col-md-6 all following">
-						<div class="single_portfolio" style="border-radius:10px;max-height: 251px;    box-shadow: 0 0 1px #000000db;">
-							<img class="img-fluid w-100" style="max-height: 251px;border-radius: 10px;" src="portfolio/Portfolio1.png" alt="">
-							<div class="overlay"></div>
-							<div class="short_info">
-								<h4><a href="portfolio-details.html">First Media Jakarta</a></h4>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-6 col-md-6 all latest popular upcoming">
-						<div class="single_portfolio" style="border-radius:10px;    box-shadow: 0 0 1px #000000db;">
-							<img class="img-fluid w-100" style="border-radius: 10px;" src="portfolio/Portfolio2.png" alt="">
-							<div class="overlay"></div>
-							<div class="short_info">
-								<h4><a href="portfolio-details.html">ReactJS Marketing Web</a></h4>
-							</div>
-						</div>
-					</div>
-
-					
-
+				<!-- Portfolio Content -->
+				<div class="col-lg-1"></div>
+				<div class="col-lg-5">
+					<ul class="list-group">
+						<li class="list-group-item">
+							Website Download Anime ( Codeigniter )
+						</li>
+						<li class="list-group-item">
+							Website Download Anime ( Wordpress )
+						</li>
+						<li class="list-group-item">
+							Website Baca Komik
+						</li>
+						<li class="list-group-item">
+							Website Company Profile
+						</li>
+						<li class="list-group-item">
+							Website Marketing
+						</li>
+						<li class="list-group-item">
+							Website Link Shortener
+						</li>
+					</ul>
 				</div>
+				<div class="col-lg-5">
+					<ul class="list-group">
+						<li class="list-group-item">
+							Aplikasi Absen Lab. Kom
+						</li>
+						<li class="list-group-item">
+							Aplikasi FFMPEG GUI
+						</li>
+						<li class="list-group-item">
+							Aplikasi SPP Sekolah
+						</li>
+						<li class="list-group-item">
+							Aplikasi POS Kasir Sederhana
+						</li>
+					</ul>
+				</div>
+				<div class="col-lg-1"></div>
 			</div>
 		</div>
 	</section>
